--- a/form.yml.erb
+++ b/form.yml.erb
@@ -7,25 +7,23 @@
   classrooms = OodAppkit.clusters.map do |cluster|
     [ cluster.id.to_s, cluster.custom_config[:classrooms].to_h ]
   end.to_h.map do |cluster_id, classrooms|
-    classes = classrooms.select do |k,v|
-      k.start_with?('stable_diffusion') && groups.include?(v)
-    end.map do |k,v|
+    classes = classrooms.select do |app_type, class_configs|
+      app_type == 'stable_diffusion'
+    end.map do |_app_type, class_configs|
+      class_configs.map do |name, class_config|
 
-      tokens = k.gsub('stable_diffusion/', '').split('/')
+        {
+          name: name,
+          size: class_config.fetch('size', 1).to_i,
+          time: class_config.fetch('time', 1).to_i,
+          account: class_config.fetch('project', nil),
+          cluster: cluster_id
+        }
 
-      # cluster, size, module_type & clusterfs are not used
-
-      {
-        name: tokens[0].nil? ? 'unknown' : tokens[0],
-        size: tokens[1].nil? ? 1 : tokens[1].to_i,
-        time: tokens[2].nil? ? 1 : tokens[2].to_i,
-        cluster_fs: tokens[3].nil? ? 'pitzer' : tokens[3].to_s,
-        module_type: tokens[4].nil? ? 'default' : tokens[4].to_s,
-        cluster: cluster_id.to_s,
-        account: v,
-      }
-    end.reject do |arr|
-      arr.empty?
+      end.select do |class_config|
+        acct = class_config.fetch(:account, nil)
+        !acct.nil? && groups.include?(acct)
+      end
     end
   end.flatten
 -%>
@@ -39,16 +37,9 @@ form:
   - classroom
   - account
   - time
-  - cluster_fs
-  - module_type
-
 
 attributes:
   account:
-    widget: "hidden_field"
-  cluster_fs:
-    widget: "hidden_field"
-  module_type:
     widget: "hidden_field"
   time:
     widget: "select"
@@ -82,8 +73,6 @@ attributes:
       - [
         "<%= cr[:name].gsub('_', ' ') %>", "<%= cr[:name] %>",
         data-set-account: "<%= cr[:account] %>",
-        data-set-cluster-fs: "<%= cr[:cluster_fs] %>",
-        data-set-module-type: "<%= cr[:module_type] %>",
         data-set-cluster: "<%= cr[:cluster] %>"
         ]
       <%- end %>
