use hours instead of time and strings for sizes

--- a/form.yml.erb
+++ b/form.yml.erb
@@ -1,5 +1,17 @@
 <%-
-  # Grab the projects P#####
+  def size_lookup
+    Hash.new(0).tap do |hsh|
+      hsh[:small] = 0
+      hsh[:medium] = 1
+      hsh[:large] = 2
+      hsh[:xlarge] = 3
+    end
+  end
+
+  def size_to_num(size)
+    size_lookup[size.to_sym].to_i
+  end
+
   groups = OodSupport::User.new.groups.sort_by(&:id).tap { |groups|
     groups.unshift(groups.delete(OodSupport::Process.group))
   }.map(&:name).grep(/^P./)
@@ -14,8 +26,8 @@
 
         {
           name: name,
-          size: class_config.fetch('size', 1).to_i,
-          time: class_config.fetch('time', 1).to_i,
+          size: size_to_num(class_config.fetch('size', 'small')),
+          hours: class_config.fetch('hours', 1).to_i,
           account: class_config.fetch('project', nil),
           cluster: cluster_id
         }
@@ -36,12 +48,12 @@ cluster:
 form:
   - classroom
   - account
-  - time
+  - hours
 
 attributes:
   account:
     widget: "hidden_field"
-  time:
+  hours:
     widget: "select"
     options:
       - [
@@ -50,7 +62,7 @@ attributes:
       - [
           "3 hours", "3",
           <%- classrooms.each do |cr| %>
-            <%- unless cr[:time].to_i >= 3 %>
+            <%- unless cr[:hours].to_i >= 3 %>
             data-option-for-classroom-<%= cr[:name].to_s.gsub('_', '-') %>: false,
             <%- end %>
           <%- end %>
@@ -58,7 +70,7 @@ attributes:
       - [
           "6 hours", "6",
           <%- classrooms.each do |cr| %>
-            <%- unless cr[:time].to_i >= 6 %>
+            <%- unless cr[:hours].to_i >= 6 %>
             data-option-for-classroom-<%= cr[:name].to_s.gsub('_', '-') %>: false,
             <%- end %>
           <%- end %>
